<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="horizontal"
    tools:context=".StatisticsActivity" >

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:weightSum="3" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.3"
            android:gravity="center_horizontal" >

            <RelativeLayout>

                <Button
                    android:id="@+id/newGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="30dp"
                    android:background="#FFFFFF"
                    android:text="@string/stats_newGame" />

                <ImageButton
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/newGame"
                    android:contentDescription="@string/save"
                    android:src="@drawable/save" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal" >

            <RelativeLayout>

                <Chronometer
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10dp"
                    android:background="#FFFFFF"
                    android:format="MM:SS"
                    android:text="@string/stats_timer" />

                <ImageButton
                    android:id="@+id/pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/timer"
                    android:background="#FFFFFF"
                    android:src="@drawable/pause"
                    android:text="@string/stats_pause" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal" >

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/posession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:background="#FFFFFF"
                    android:text="@string/stats_posession" />

                <Button
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/posession"
                    android:background="#FFFFFF"
                    android:text="@string/stats_home" />

                <Button
                    android:id="@+id/away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/posession"
                    android:background="#FFFFFF"
                    android:text="@string/stats_away" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
             >

            <RelativeLayout>

                <TextView
                    android:id="@+id/shots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="85dp"
                    android:layout_marginRight="85dp"
                    android:background="#FFFFFF"
                    android:text="@string/stats_shots" />

                <ImageButton
                    android:id="@+id/homeShotsMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/shots"
                    android:background="#FFFFFF"
                    android:src="@drawable/minus"
                    android:text="@string/stats_homeShotsMinus" />

                <TextView
                    android:id="@+id/numHomeShots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_toLeftOf="@+id/homeShotsMinus"
                    android:background="#FFFFFF"
                    android:text="@string/stats_numHomeShots" />

                <ImageButton
                    android:id="@+id/homeShotsPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/numHomeShots"
                    android:background="#FFFFFF"
                    android:src="@drawable/plus"
                    android:text="@string/stats_homeShotsPlus" />

                <ImageButton
                    android:id="@+id/awayShotsMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/numAwayShots"
                    android:background="#FFFFFF"
                    android:src="@drawable/minus"
                    android:text="@string/stats_awayShotsMinus" />

                <TextView
                    android:id="@+id/numAwayShots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_toRightOf="@+id/awayShotsPlus"
                    android:background="#FFFFFF"
                    android:text="@string/stats_numAwayShots" />

                <ImageButton
                    android:id="@+id/awayShotsPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/shots"
                    android:background="#FFFFFF"
                    android:src="@drawable/plus"
                    android:text="@string/stats_awayShotsPlus" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>