<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context=".FormationsActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >


     <ImageButton
            android:id="@+id/bPlayer"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:contentDescription="@string/b_player"
            android:src="@drawable/b_player" />
   
        <ImageButton
            android:id="@+id/rPlayer"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="165dp"
            android:layout_toLeftOf="@+id/refresh"
            android:background="@null"
            android:contentDescription="@string/r_player"
            android:src="@drawable/r_player" />

        <ImageButton
            android:id="@+id/ball"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="120dp"
            android:layout_toLeftOf="@+id/refresh"
            android:background="@null"
            android:contentDescription="@string/ball"
            android:src="@drawable/ball" />

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/draw"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/draw"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/erase"
            android:contentDescription="@string/brush"
            android:src="@drawable/marker" />

        <ImageButton
            android:id="@+id/erase"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/save"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="61dp"
        android:padding="0dp" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:padding="0dp"
            android:scaleType="center"
            android:src="@drawable/field" />

        <com.example.coachme.DrawingView
            android:id="@+id/drawing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:padding="0dp" />
    </FrameLayout>

</LinearLayout>